# portaldot-hackathon-2026-portal-naming-service-pnslabs

./: .gitignore  BUILD_AND_DEPLOY.md  CLAUDE.md  Cargo.toml  DESCRIPTION.md  HACKATHON.md  HANDOFF.md  LICENSE  README.md  SUBMISSION.md  pnpm-lock.yaml  rpc.md  rust-toolchain.toml
.cargo/: config.toml
app/: .env.example  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
app/public/: alice.json
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/app/api/faucet/: route.ts
app/src/app/docs/: page.tsx
app/src/app/manage/[name]/: page.tsx
app/src/app/names/: page.tsx
app/src/app/onboarding/: page.tsx
app/src/app/pitch/: page.tsx  speech.md
app/src/components/: AddressLookup.tsx  NameConsole.tsx  Providers.tsx  RegisterCard.tsx  ResolveCard.tsx  ReverseCard.tsx  SdkDocs.tsx  SearchConsole.tsx  SiteFooter.tsx  SiteHeader.tsx  SmoothScroll.tsx  YourNames.tsx  doodles.tsx  ui.tsx
app/src/lib/: faucet.ts  format.ts  network-context.tsx  networks.ts  owned-names.ts  pns.ts  privy-signer.ts  register.ts  reverse.ts  use-account.ts  wallet.ts
contracts/flipper/: Cargo.toml
contracts/pot_registrar/: Cargo.toml  lib.rs
contracts/public_resolver/: Cargo.toml  lib.rs
contracts/registrar_controller/: Cargo.toml  lib.rs
contracts/registry/: Cargo.toml  lib.rs
contracts/reverse_registrar/: Cargo.toml  lib.rs
contracts/subname_registrar/: Cargo.toml  lib.rs
docker/: Dockerfile.contracts  build-contract.sh
docs/: brew-restore-list.md  toolchain.md
docs/superpowers/plans/: 2026-05-30-phase-0-toolchain-and-scaffolding.md  2026-05-30-portal-naming-service-roadmap.md
docs/superpowers/specs/: 2026-05-30-portal-naming-service-design.md
pitch/: ARCHITECTURE.md  ASK.md  AUDIT.md  DEMO_SCRIPT.md  README.md  SCALE_AND_BUSINESS.md  SCRIPT.md  SLIDES.md  SUBMISSION_CHECKLIST.md
scripts/: call_fixture.py  chain.py  check_connection.py  create_name.py  deploy_fixture.py  deploy_ink.py  deploy_pns.py  export_alice_json.py  faucet.py  gen_test_vectors.py  pns_addresses.json  prep_wasm.py  probe_cross_contract.py  selectors.py  set_commit_window.py  setup_testnet.py  strip_exports.py  test_e2e.py  topup_contracts.py
scripts/fixtures/: noop.wasm  noop.wat  ok_trap_revert.wasm  probe_caller.wasm  probe_caller.wat
