[package]
name = "registry"
version = "0.1.0"
authors = ["pns"]
edition = "2018"

[dependencies]
# All ink! crates pinned EXACTLY to rc3 (caret would float to 3.4 which needs
# edition2021, unsupported by rustc 1.52 / nightly-2021-03-01).
ink_primitives = { version = "=3.0.0-rc3", default-features = false }
ink_metadata   = { version = "=3.0.0-rc3", default-features = false, features = ["derive"], optional = true }
ink_env        = { version = "=3.0.0-rc3", default-features = false }
ink_storage    = { version = "=3.0.0-rc3", default-features = false }
ink_lang       = { version = "=3.0.0-rc3", default-features = false }
ink_prelude    = { version = "=3.0.0-rc3", default-features = false }
ink_allocator  = { version = "=3.0.0-rc3", default-features = false }

# Pin transitive non-ink crates whose newer releases require edition2021.
impl-trait-for-tuples = "=0.2.1"

scale      = { package = "parity-scale-codec", version = "2.1", default-features = false, features = ["derive"] }
scale-info = { version = "0.6.0", default-features = false, features = ["derive"], optional = true }

[lib]
name = "registry"
path = "lib.rs"
crate-type = ["cdylib"]

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []

[workspace]
